chore: add redis queue

--- a/src/app/views/emails/subscription.hbs
+++ b/src/app/views/emails/subscription.hbs
@@ -1,5 +1,5 @@
 <p style="font-size: 17px;">
-  <strong>{{ subscribedUserName }}</strong> se inscreveu no seu evento <strong>{{ meetup.title }}</strong>
+  <strong>{{ subscribedUserName }}</strong> se inscreveu no seu evento.
 </p>
 <br />
 
